--- a/web/src/app/root-app.html
+++ b/web/src/app/root-app.html
@@ -26,7 +26,6 @@
           bridgeType: {
             type: String,
             value: () => {
-              // TODO: Uncomment this when we're ready to support the fake server again.
               var defaultBridgeType = null;
               if (window.location.hostname.includes("localhost") ||
                 window.location.hostname.includes("127.0.0.1")) {
@@ -34,6 +33,8 @@
               } else {
                 defaultBridgeType = 'remote';
               }
+              // TODO: Remove this when we're ready to support the fake server again.
+              defaultBridgeType = 'remote';
               var bridgeType = Utils.getParameterByName('bridge', defaultBridgeType);
               if (bridgeType != 'fake' && bridgeType != 'remote') {
                 this.fire('ghvz-alert', { message: "'bridge' must either be 'fake' or 'remote'! Falling back to fake." });
@@ -83,14 +84,9 @@
                 if (!('firebaseConfig' in config)) {
                   throw "Couldn't find firebaseConfig!"
                 }
-                if (!('fakeUserIds' in config)) {
-                  throw "Couldn't find fakeUserIds!"
-                }
-
                 this.async(() => {
                   this.config = config;
                 });
-
               } catch (e) {
                 console.error("Got exception:", e);
                 console.error("Received config response:", ajaxRequest.responseText);
