--- a/web/src/app/display-page.html
+++ b/web/src/app/display-page.html
@@ -29,6 +29,8 @@
           user: Object,
           userId: String,
           email: String,
+          player: Object,
+          playerId: String,
 
           path: {
             type: String,
