Fix dialog bug and implement reward creation in fake server
Fixes issue where dialog shadow was covering dialog (removed "modal").

--- a/web/src/app/game-page.html
+++ b/web/src/app/game-page.html
@@ -69,7 +69,7 @@
           this.$$("#drawer").closeDrawer();
         },
 
-        openDialog_(e) {
+        openDialog_(event) {
           // Move the dialog so it covers the whole screen
           if (event.detail.dialog) {
             this.appendChild(event.detail.dialog);
