Fix various bugs
Fix annoying console warning about dom-repeat items being objects instead of arrays.

Fix paper-icon-buttons not showing up (display of the inner iron-icon was set to none, had to override the style to set it to visible)

--- a/web/src/app/display-game-page.html
+++ b/web/src/app/display-game-page.html
@@ -210,8 +210,7 @@
         spaced$="[[!isMobile]]" with-back="[[isMobile]]" with-menu="[[isMobile]]">
         <div class="header">Players</div>
         <ghvz-player-table class="expand" game="[[game]]" is-mobile="[[isMobile]]" bridge="[[bridge]]"
-          reward-categories-by-id="[[game.rewardCategoriesById]]" players="[[game.players]]"
-          players-by-id="[[game.playersById]]">
+          reward-categories-by-id="[[game.rewardCategoriesById]]" players="[[game.players]]">
           </ghv-player-table>
       </ghvz-card>
     </template>
